--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.image-wrap img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: top center;
+  transition: all 1s ease-in-out;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.image-wrap:hover img {
+  object-position: bottom center;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.items-start {
+  display: none;
+}
+.shadow {
+  background-color: #3D4756;
 }
